# node-addon-api

./: .gitignore  napi-inl.h  napi.h  package.json
src/: CMakeLists.txt  node_api.cc
test/: .gitignore  CMakeLists.txt  binding.cc  binding.gyp  env.json.in  index.js  napi_child.js  sharedvaluereference.cc  sharedvaluereference.js
test/src/: arraybuffer.test.js  asynccontext.test.js  asyncworker.test.js  bigint.test.cc  bigint.test.def.js  bigint.test.js  binding.test.cc  buffer.test.js  callbackscope.test.js  error.test.js  external.test.js  function.test.js  handlescope.test.js  memory_management.test.js  name.test.js  object.object_deprecated.test.cc  object.object_deprecated.test.js  objectreference.test.js  objectwrap.test.js  promise.test.js  thunking_manual.test.cc  thunking_manual.test.js  typedarray-bigint.test.def.js  typedarray-bigint.test.js  typedarray.test.cc  typedarray.test.js  version_management.test.js
